@@ -19,8 +19,10 @@ apport (0.74) UNRELEASED; urgency=low
     interpreters and check ExecutablePath against it. (LP: #102056)
   * apport/ui.py: Ignore SystemError exceptions from apt, which happen on
     badly formatted source.list entries. (LP: #98901)
+  * apport/ui.py: Fix crash on None candiateOrigin from the apt cache object.
+    (LP: #98961)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed,  4 Apr 2007 14:03:53 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed,  4 Apr 2007 14:10:21 +0200
 
 apport (0.73) feisty; urgency=low
 
